# Tutlebot-RL

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
ros/: README.md
ros/log/: environment_log.mat
ros/rviz/: turtlebot_qlearn.rviz
ros/src/turtlebot_dqn/: CMakeLists.txt  package.xml
ros/src/turtlebot_dqn/include/MiniDNN/: Callback.h  Config.h  Layer.h  MiniDNN.h  Network.h  Optimizer.h  Output.h
ros/src/turtlebot_dqn/include/MiniDNN/Activation/: Identity.h  ReLU.h  Sigmoid.h
ros/src/turtlebot_dqn/include/MiniDNN/Callback/: VerboseCallback.h
ros/src/turtlebot_dqn/include/MiniDNN/Layer/: Convolutional.h  FullyConnected.h  MaxPooling.h
ros/src/turtlebot_dqn/include/MiniDNN/Optimizer/: AdaGrad.h  RMSProp.h  SGD.h
ros/src/turtlebot_dqn/include/turtlebot_dqn/: agent_environment.h  dqn.h  dqnlearner.h  matstruct.h  replay.h  turtlebot_lidar_dqn_env.h  turtlebot_lidar_env.h  utilities.h
ros/src/turtlebot_dqn/launch/: turtlebot_arl.launch
ros/src/turtlebot_dqn/src/: dqn.cpp  dqnlearner.cpp  matstruct.cpp  replay.cpp  turtlebot_dqn_node.cpp  turtlebot_lidar_dqn_env.cpp  turtlebot_lidar_env.cpp
ros/src/user_interface/: CMakeLists.txt  package.xml
ros/src/user_interface/include/user_interface/: user_interface_node.h
ros/src/user_interface/src/: keyboard_node.cpp  user_interface_node.cpp
ros/src/virtual_walls/: CMakeLists.txt  package.xml
ros/src/virtual_walls/src/: virtual_walls_node.cpp
simulator/: CMakeLists.txt
simulator/include/: Environment.h
simulator/src/: Environment.cpp
snippets/: README.md
(+6 files in other folders)
